--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   padding: 0;
   margin: 0;
@@ -7,4 +11,13 @@
 #root {
   min-height: 100vh;
   display: flex;
+}
+
+@layer components {
+  .recent-entry {
+    @apply flex items-center gap-2 p-2 pr-10 rounded-[30px] cursor-pointer hover:bg-[#e2e6eb];
+  }
+  .bottom-item {
+    @apply pr-2 cursor-pointer;
+  }
 }
