--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,32 @@ body {
     @apply pr-2 cursor-pointer;
   }
 }
+
+.text-gradient {
+  background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.card {
+  height: 200px;
+  padding: 14px;
+  background-color: #f0f4f9;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+.card:hover {
+  background-color: #dfe4ea;
+}
+
+.card-image {
+  width: 35px;
+  padding: 5px;
+  position: absolute;
+  background-color: white;
+  border-radius: 20px;
+  bottom: 10px;
+  right: 10px;
+}
